Se hace la creación de TIENDA Y varios cambios

--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -11,5 +11,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <div>HOLAA</div>
+        <div> 
+            <h1>Titulo H1</h1>
+        </div>
     </body>
 </html>
