--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -13,6 +13,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <div>HOLAA</div>
         <div> 
             <h1>Titulo H1</h1>
+            
+            <br/><!-- Salto de linea -->
+            
         </div>
     </body>
 </html>
